2009-05-05  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Bug 25559: Improve native function call performance
        <https://bugs.webkit.org/show_bug.cgi?id=25559>

        In order to cache calls to native functions we now make the standard
        prototype functions use a small assembly thunk that converts the JS
        calling convention into the native calling convention.  As this is
        only beneficial in the JIT we use the NativeFunctionWrapper typedef
        to alternate between PrototypeFunction and JSFunction to keep the
        code sane.  This change from PrototypeFunction to NativeFunctionWrapper
        is the bulk of this patch.

        * JavaScriptCore.exp:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * assembler/MacroAssemblerX86Common.h:
        (JSC::MacroAssemblerX86Common::call):
        * assembler/MacroAssemblerX86_64.h:
        (JSC::MacroAssemblerX86_64::addPtr):
        * assembler/X86Assembler.h:
        (JSC::X86Assembler::leaq_mr):
        (JSC::X86Assembler::call_m):
        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::execute):
        (JSC::Interpreter::prepareForRepeatCall):
        * jit/JIT.cpp:
        (JSC::JIT::privateCompileCTIMachineTrampolines):
        * jit/JIT.h:
        (JSC::JIT::compileCTIMachineTrampolines):
        * jit/JITCall.cpp:
        (JSC::JIT::linkCall):
        (JSC::JIT::compileOpCallInitializeCallFrame):
        (JSC::JIT::compileOpCall):
        * jit/JITCode.h:
        (JSC::JITCode::operator bool):
        * jit/JITInlineMethods.h:
        (JSC::JIT::emitGetFromCallFrameHeader):
        (JSC::JIT::emitGetFromCallFrameHeader32):
        * jit/JITStubs.cpp:
        (JSC::JITStubs::JITStubs):
        (JSC::JITStubs::cti_op_call_JSFunction):
        (JSC::JITStubs::cti_vm_dontLazyLinkCall):
        (JSC::JITStubs::cti_vm_lazyLinkCall):
        (JSC::JITStubs::cti_op_construct_JSConstruct):
        * jit/JITStubs.h: